      summary format which was restored by `vm-restore-saved-summary-formats'.

    * The button for an image or PDF shows a thumbnail now when possible.
      This requires ImageMagick.  (Thanks to Eric Schulte for the idea and
      initial code.)

    * Allow to reorder messages headers before sending by setting the new
      variable `vm-mail-reorder-message-headers'.

  BUG FIXES

    * `vm-quit-no-change' made to honour the setting of the variable
      `delete-auto-save-files'. (Uday S. Reddy)

  IMPROVEMENTS for pop-folders (Uday S. Reddy)

    * Added the variable `vm-pop-debug' to keep trace buffers.

    * New commands `vm-pop-start-bug-report' and `vm-pop-submit-bug-report'
      which track POP session details.


  IMPROVEMENTS for imap-folders (Uday S. Reddy)

    * Made server expunge more robust.  Added new variable
      `vm-imap-expunge-retries' to force retries for sluggish servers.

    * Allow message attributes as well as labels to be saved on server

    * Changed vm-imap-get-new-mail to do synchronization: reading and writing
      message attributes & labels, expunge messages in the cache.  Added
      variable `vm-imap-sync-on-get' to control this behavior.

    * Added command `vm-imap-synchronize' to do full synchronization. 

    * Trapping IMAP server errors uniformly.

    * New commands `vm-imap-start-bug-report' and `vm-imap-submit-bug-report'
      which track IMAP session details.

    * New variable `vm-imap-account-alist' allows multiple IMAP accounts to be
      handled uniformly.  The variable `vm-imap-server-list' is now obsolete.
      IMAP folders should be specified in the minibuffer using the
      account:mailbox format.  See the info node on IMAP folders.

    * New variable `vm-load-headers-only' to enable headers-only
      downloading of IMAP folders.  (This is still experimental.)

    * IMAP-FCC is extended to work for virtual folders, but only if
      the real parent message is an IMAP message.

VM 8.0.12-devo
